@@ -1,3 +1,7 @@
+2016-04-28 0.7.8 beta
+List plugins in settings window.
+Plugins can be disabled now.
+
 2016-04-27 0.7.8 beta
 Show file name in window title.
 Handle pitch bend in visualization.
